[package]
name = "eggersmann_app_server_ms_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["cookies", "blocking", "json", "rustls-tls"] }
eggersmann_app_server_auth = {git = "https://github.com/physics515/egg-server-auth"}
azure_security_keyvault = "*"
azure_identity = "*"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91f6288", features=['json'] }