[package]
name = "eggersmann_app_server_ms_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["cookies", "blocking", "json", "rustls-tls"] }
eggersmann_app_server_auth = {git = "https://github.com/physics515/egg-server-auth"}
azure_security_keyvault = "0.20"
azure_identity = "0.20"
rocket = { version = "0.5", features=['json'] }